# cli-video-player

./: Cargo.toml  README.md
src/: app.rs  args.rs  audio.rs  color.rs  ffmpeg.rs  frame.rs  konst.rs  lib.rs  main.rs  utils.rs  video.rs
