[package]
name = "cli-video-player"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.1", features = ["derive"] }
color-eyre = "0.6.2"
console = "0.15.8"
itertools = "0.12.1"
rodio = { version = "0.17.3", features = ["symphonia-isomp4", "symphonia"] }
term_size = "0.3.2"
